# kitfg

./: .gitignore  README.md  example_config.toml  pyproject.toml  scratchpad.ipynb
TestFixture.pretty/: TestFixture_AlignmentPin_5.0mm.kicad_mod  TestFixture_NoPin.kicad_mod  TestFixture_P100.kicad_mod  TestFixture_P50.kicad_mod  TestFixture_P75.kicad_mod  TestFixture_PressurePin_3.0mm.kicad_mod
src/kitfg/: cli.py  config.py  kitfg.py
