[project]
authors = [{ name = "Matti Airas", email = "matti.airas@hatlabs.fi" }]
name = "kitfg"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
  "kicad-python>=0.2.0,<0.3",
  "build123d>=0.9.1,<0.10",
  "breakneck>=0.3.0",
]

[project.scripts]
kitfg = "kitfg.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
shapely = ">=2.0.7,<3"
matplotlib = ">=3.10.1,<4"
pip = ">=25.0.1,<26"
toml = ">=0.10.2,<0.11"
pydantic = ">=2.10.6,<3"

[tool.setuptools.packages.find]
where = ["src"]
